force-app/main/default/objects/Employee__c/fields/Cell__c.field-meta.xml
<CustomField>
    <fullName>Cell__c</fullName>
    <label>Cell</label>
    <precision>15</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>