force-app/main/default/objects/Employee__c/fields/Consumer_All_the_Leave_Quota__c.field-meta.xml
<CustomField>
    <fullName>Consumer_All_the_Leave_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer All the Leave Quota</label>
    <type>Checkbox</type>
</CustomField>