force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>