force-app/main/default/objects/Employee__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>this field contains the name of the employee</description>
    <inlineHelpText>this field contains the name of the employee</inlineHelpText>
    <label>First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>