force-app/main/default/objects/Employee__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the employee</description>
    <inlineHelpText>Last name of the employee</inlineHelpText>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>