force-app/main/default/objects/Employee__c/validationRules/manager_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>manager_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Full_Name__c   =    Manager__r.First_Name__c  +  Manager__r.Last_Name__c</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>